# tree-count

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-dev.sh  setup.cfg
app/: aerobotics_client.py  config.py  main.py  missing_trees.py  models.py  visualization.py
outputs/: debug_cache_216269.json
scripts/: debug_grid.py
tests/: __init__.py  test_missing_trees.py
