[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerobotics-missing-trees-api"
version = "1.0.0"
description = "API to detect missing trees in orchards using Aerobotics data"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Jessica Andrew", email = "jessmandrew@gmail.com"}
]
keywords = ["aerobotics", "agriculture", "drone", "trees", "api"]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "requests==2.31.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "httpx==0.25.0",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.13.2",
]

[project.urls]
Homepage = "https://github.com/JessicaAndrew/tree-count"
Documentation = "https://github.com/JessicaAndrew/tree-count#readme"
Repository = "https://github.com/JessicaAndrew/tree-count.git"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
